<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	    
	<item 
	    android:id="@+id/action_playCurrent"
	    android:orderInCategory="1"
	    android:title="@string/action_playCurrent"/>
	<item
	    android:id="@+id/action_playWhole"
	    android:orderInCategory="2"
	    android:title="@string/action_playWhole"/>
	<item
	    android:id="@+id/action_save"
	    android:orderInCategory="3"
	    android:title="@string/action_save"/>
	<item
	    android:id="@+id/action_history"
	    android:orderInCategory="4"
	    android:title="@string/action_history"/>
	<item
	    android:id="@+id/action_import"
	    android:orderInCategory="5"
	    android:title="@string/action_import"/>
	<item
	    android:id="@+id/action_export"
	    android:orderInCategory="6"
	    android:title="@string/action_export"/>

</menu>